<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/details_textView" />

    <EditText
        android:id="@+id/route_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/route_title_hint"
        android:padding="4dp" />

    <EditText
        android:id="@+id/route_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/route_color_hint"
        android:padding="4dp" />

    <EditText
        android:id="@+id/route_setter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/route_setter_hint"
        android:padding="4dp" />

    <CheckBox
        android:id="@+id/route_done_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@null"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:padding="4dp"
        android:text="@string/isDone_checkBox_text" />

    <Button
        android:id="@+id/route_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/date_button_text" />

    <Button
        android:id="@+id/route_diff_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/diff_button_text" />

</LinearLayout>