<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
   	android:gravity="center_horizontal" 
    android:padding="4dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_gravity="center"
        android:padding="4dp">

        <TextView
            android:id="@+id/uiaa_diff_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="24dp"
            android:text="@string/uiaa_diff_text" />

        <NumberPicker
            android:id="@+id/uiaa_diff_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp" />

        <Button
            android:id="@+id/uiaa_diff_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="12dp"
            android:text="@string/uiaa_diff_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_gravity="center"
        android:padding="4dp">

        <TextView
            android:id="@+id/frz_diff_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:layout_marginLeft="24dp"
            android:text="@string/frz_diff_text" />

        <NumberPicker
            android:id="@+id/frz_diff_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp" />

        <Button
            android:id="@+id/frz_diff_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp" 
            android:layout_marginLeft="12dp"
            android:text="@string/frz_diff_button" />
    </LinearLayout>

</LinearLayout>